--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ h3,h2 {
             <img src="pizza-1.png" width="250" class="center">
             <h3>R29.95</h3>
             <div>
-                Single small chicken BBQ and mushroom pizza with extra mozzarella cheese and p
+                Single small chicken BBQ and mushroom pizza with extra mozzarella cheese and pepparoni.
             </div>
           </div>
           </div>
